--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,6 +34,22 @@ footer {
   position: relative;
 }
 
+.belonging {
+  color: #000;
+  text-decoration:none;
+  position: absolute;
+  padding-left: 800px;
+  font-style: italic;
+  margin-bottom: 300px;
+}
+
+.sub-belonging {
+  color: #000;
+  text-decoration:none;
+  font-style: italic;
+  font-size: 10px;
+}
+
 .logo-img {
   width: 50px;
   height: 50px;
